# cppsandbox

./: .gitignore  README.md
callwithindex/: callwithindex.cpp
compiletimelogarithm/: .cproject  .project  CMakeLists.txt  Makefile  main.cpp
constexprfloatingpoint/: CMakeLists.txt  FloatingPoint.hpp  main.cpp  test.cpp
fizzbuzz/: CMakeLists.txt  fizzbuzz.cpp  fizzbuzz.h  main.cpp
fractional_trig/: CMakeLists.txt  main.cpp
generic_abs/: CMakeLists.txt  main.cpp
lfsr/: CMakeLists.txt  bignum.h  lfsr_small.h  lfsrmain.cpp  test_bignum.cpp  test_integerselect.cpp  test_large_lfsr.cpp  test_lfsr_coefficients.cpp  test_small_lfsr.cpp
logic_gates/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
logic_gates/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
logic_gates/source/: lib.cpp  main.cpp
logic_gates/test/: CMakeLists.txt
logic_gates/test/source/: logic_gates_test.cpp
multiplication/: CMakeLists.txt  benchmark_division.cpp  benchmark_equality.cpp  fuzzer.cpp  main.cpp  multiplication.cpp  multiplication.h  test.cpp
pandigital_polydivisible/: CMakeLists.txt  main.cpp
parallel_partial_sum/: CMakeLists.txt  benchmark.cpp  benchmark_results.csv  do_clang_format.sh  main.cpp  sort_benchmark.sh  unittest_unsignedint.cpp
parallel_partial_sum/include/: parpartial.h
project_example/: CMakeLists.txt  main.cpp
threadlocallogger/: CMakeLists.txt
threadlocallogger/src/: CMakeLists.txt  ThreadName.cpp  ThreadName.h  logger.cpp  logger.h  main.cpp  worker.cpp  worker.h
tuplereorganizer/: .cproject  .project  CMakeLists.txt  Makefile  main.cpp
